hphp/hack/test/typecheck/xhp_expression_method.php.exp
File "xhp_expression_method.php", line 10, characters 10-20:
Please add parentheses around the XHP component (Parsing[1002])
